--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,13 +28,11 @@
 							<div class="carousel-inner" role="listbox">
 								<div class="item active">
 									<img
-										src="http://lorempixel.com/output/sports-q-c-1600-500-1.jpg"
+										src="http://lorempixel.com/output/abstract-q-c-1600-500-1.jpg"
 										alt="..." />
 									<div class="carousel-caption">
-										<h4>First Thumbnail Label</h4>
-										<p>Contrary to popular belief, Lorem Ipsum is not simply
-											random text. It has roots in a piece of classical Latin
-											literature from 45 BC, making it over 2000 years old.</p>
+										<h4>Save upto 40% on children's books.</h4>
+										
 									</div>
 								</div>
 								<div class="item">
@@ -42,22 +40,19 @@
 										src="http://lorempixel.com/output/sports-q-c-1600-500-2.jpg"
 										alt="..." />
 									<div class="carousel-caption">
-										<h4>First Thumbnail Label</h4>
-										<p>Contrary to popular belief, Lorem Ipsum is not simply
-											random text. It has roots in a piece of classical Latin
-											literature from 45 BC, making it over 2000 years old.</p>
+										<h4>Subscribe now for coupons, newsletters, and more!</h4>
+										
 									</div>
 								</div>
 								<div class="item">
 									<img
-										src="http://lorempixel.com/output/sports-q-c-1600-500-3.jpg"
+										src="http://lorempixel.com/output/people-q-c-1600-500-1.jpg"
 										alt="..." />
 									<div class="carousel-caption">
-										<h4>First Thumbnail Label</h4>
-										<p>Contrary to popular belief, Lorem Ipsum is not simply
-											random text. It has roots in a piece of classical Latin
-											literature from 45 BC, making it over 2000 years old.</p>
-									</div>
+										<h4>Discover popular fiction titles and much more. BSU Bookstore has award winning fiction titles and bona fide page turners on sale now for your reading enjoyment.
+						</h4>
+										
+			</div>
 								</div>
 								...
 							</div>
@@ -150,19 +145,44 @@
 								<img class="img-responsive" src="/image/book1.png" />
 							</div>
 							<div class="col-xs-2">
-								<img class="img-responsive" src="/image/book1.png" />
+								<img class="img-responsive" src="/image/book2.jpg" />
 							</div>
 							<div class="col-xs-2">
-								<img class="img-responsive" src="/image/book1.png" />
+								<img class="img-responsive" src="/image/book3.jpg" />
 							</div>
 							<div class="col-xs-2">
-								<img class="img-responsive" src="/image/book1.png" />
+								<img class="img-responsive" src="/image/book4.jpg" />
 							</div>
 							<div class="col-xs-2">
-								<img class="img-responsive" src="/image/book1.png" />
+								<img class="img-responsive" src="/image/book5.jpg" />
 							</div>
 							<div class="col-xs-2">
-								<img class="img-responsive" src="/image/book1.png" />
+								<img class="img-responsive" src="/image/book6.jpg" />
+							</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+							<img src="/image/shelf.png" class="img-responsive" />
+					<div class="carousel-caption">
+						<div class="row">
+							<div class="col-xs-2">
+								<img class="img-responsive" src="/image/book7.jpg" />
+							</div>
+							<div class="col-xs-2">
+								<img class="img-responsive" src="/image/book8.jpg" />
+							</div>
+							<div class="col-xs-2">
+								<img class="img-responsive" src="/image/book9.jpg" />
+							</div>
+							<div class="col-xs-2">
+								<img class="img-responsive" src="/image/book10.jpg" />
+							</div>
+							<div class="col-xs-2">
+								<img class="img-responsive" src="/image/book11.jpg" />
+							</div>
+							<div class="col-xs-2">
+								<img class="img-responsive" src="/image/book12.jpg" />
 							</div>
 							</div>
 						</div>
@@ -175,44 +195,19 @@
 								<img class="img-responsive" src="/image/book1.png" />
 							</div>
 							<div class="col-xs-2">
-								<img class="img-responsive" src="/image/book1.png" />
+								<img class="img-responsive" src="/image/book5.jpg" />
 							</div>
 							<div class="col-xs-2">
-								<img class="img-responsive" src="/image/book1.png" />
+								<img class="img-responsive" src="/image/book3.jpg" />
 							</div>
 							<div class="col-xs-2">
-								<img class="img-responsive" src="/image/book1.png" />
+								<img class="img-responsive" src="/image/book12.jpg" />
 							</div>
 							<div class="col-xs-2">
-								<img class="img-responsive" src="/image/book1.png" />
+								<img class="img-responsive" src="/image/book4.jpg" />
 							</div>
 							<div class="col-xs-2">
-								<img class="img-responsive" src="/image/book1.png" />
-							</div>
-							</div>
-						</div>
-					</div>
-					<div class="item">
-							<img src="/image/shelf.png" class="img-responsive" />
-					<div class="carousel-caption">
-						<div class="row">
-							<div class="col-xs-2">
-								<img class="img-responsive" src="/image/book1.png" />
-							</div>
-							<div class="col-xs-2">
-								<img class="img-responsive" src="/image/book1.png" />
-							</div>
-							<div class="col-xs-2">
-								<img class="img-responsive" src="/image/book1.png" />
-							</div>
-							<div class="col-xs-2">
-								<img class="img-responsive" src="/image/book1.png" />
-							</div>
-							<div class="col-xs-2">
-								<img class="img-responsive" src="/image/book1.png" />
-							</div>
-							<div class="col-xs-2">
-								<img class="img-responsive" src="/image/book1.png" />
+								<img class="img-responsive" src="/image/book2.jpg" />
 							</div>
 							</div>
 						</div>
