--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,11 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head th:fragment="common-header">
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<!--  <meta name="viewport" content="width=device-width, initial-scale=1" />
--->
+
 
 <title>BSU Bookstore</title>
 
@@ -14,11 +12,18 @@
 
 <link href="/css/non-responsive.css" rel="stylesheet" />
 
+<!-- data table -->
+<link th:href="@{/css/jquery.dataTables.min.css}" rel="stylesheet" />
+<link th:href="@{/css/dataTables.bootstrap.min.css}" rel="stylesheet" />
+
+<link th:href="@{/css/font-awesome.min.css}" rel="stylesheet" />
+
 <!-- Custom styles for this template -->
 <link href="/css/style.css" rel="stylesheet" />
 
-<link rel="icon" href="/image/apple-touch-icon.png" />
+<link rel="icon" href="/image/applie-touch-icon.png" />
 </head>
+
 
 <body>
 <div th:fragment="navbar">
@@ -32,17 +37,20 @@
 				
 				<a class="navbar-brand" href="#">BSU Bookstore</a>
 			</div>
-			<div id="navbar" >
+			
+			
+
+<div id="navbar" >
 				<ul class="nav navbar-nav navbar-left">
 					<!--  <li class="active"><a href="#">Home</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">Contact</a></li>-->
 					<li class="dropdown">
-					<a href="#" class="dropdown-toggle"
+					<a th:href="@{/bookshelf}" class="dropdown-toggle"
 						data-toggle="dropdown" role="button" aria-haspopup="true"
 						aria-expanded="false">BOOKS <span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Browse the bookshelf</a></li>
+							<li><a th:href="@{/bookshelf}">Browse the bookshelf</a></li>
 							<li><a href="#">Store hours &#38; Directions</a></li>
 							<li><a href="#">FAQ</a></li>
 							
@@ -56,22 +64,42 @@
 						<button type="submit" class="btn btn-default">Search</button>
 						</form>
 				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Shopping cart</a></li>
-					<li><a sec:authorize="isAnonymous()" th:href="@{/login}">My Account</a></li>
-					<li><a sec:authorize="isAuthenticated()" th:href="@{/myProfile}">My Account</a></li>
-					<li><a sec:authorize="isAuthenticated()" th:href="@{/logout}">Logout</a></li>
-				</ul>
+				
+				
+					
+					<ul class="nav navbar-nav navbar-right">
+						<li><a th:href="@{/shoppingCart/cart}">SHOPPING CART</a></li>
+						<li><a sec:authorize="isAnonymous()" th:href="@{/login}">MY ACCOUNT</a></li>
+						<li><a sec:authorize="isAuthenticated()" th:href="@{/myProfile}">MY ACCOUNT</a></li>
+						<li><a sec:authorize="isAuthenticated()" th:href="@{/logout}">LOGOUT</a></li>
+					</ul>
+				</div>
+				<!--/.nav-collapse -->
+				
+				
 			</div>
-			<!--/.nav-collapse -->
-		</div>
-		<!--/.container-fluid -->
-	</nav>
+			<!--/.container-fluid -->
+		</nav>
 	</div>
+	
+		
 	<div th:fragment="body-bottom-scripts">
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
+	<script th:src="@{/js/jquery.min.js}"></script>
+	<!-- <script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>  -->
+	<script th:src="@{/js/bootstrap.min.js}"></script>
+	<script th:src="@{/js/scripts.js}"></script>
+	
+	
+		
+	
+	
+	<!-- data table -->
+		<script th:src="@{/js/jquery.dataTables.min.js}"></script>
+		<script th:src="@{/js/dataTables.bootstrap.min.js}"></script>
+	
+	
+	
 	</div>
 </body>
 </html>
